--- a/EddySapClone/app/src/main/res/layout/activity_main.xml
+++ b/EddySapClone/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <RelativeLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -25,36 +24,41 @@
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
-        app:tabGravity="fill"
-        app:tabTextColor="@color/white"
-        app:tabIndicatorColor="@color/purple_500"
-        app:tabSelectedTextColor="@color/white"
-        app:tabIndicator="@color/white"
-        app:tabIndicatorHeight="5dp"
         android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@id/app_bar"
         android:background="@color/purple_500"
-        android:layout_height="40dp">
+        app:tabGravity="fill"
+        app:tabIndicator="@color/white"
+        app:tabIndicatorColor="@color/white"
+        app:tabIndicatorHeight="3dp"
+        app:tabSelectedTextColor="@color/white"
+        app:tabTextColor="@color/white"
+        tools:ignore="SpeakableTextPresentCheck">
+
 
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/tab_layout"
         android:visibility="visible"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_width="match_parent"
-        android:layout_below="@id/tab_layout"
-        android:layout_height="match_parent"/>
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="20dp"
-        android:id="@+id/fab_action"
+        android:layout_alignParentBottom="true"
         android:src="@drawable/cart_nesso"
+        android:layout_margin="20dp"
         android:contentDescription="@string/floating_bar" />
 
 </RelativeLayout>
