--- a/EddySapClone/app/src/main/res/layout/layout_chart_list.xml
+++ b/EddySapClone/app/src/main/res/layout/layout_chart_list.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
@@ -19,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="10dp">
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:text="Name"
                 android:textStyle="bold"
-                android:textSize="20sp"
+                android:textSize="17sp"
                 android:layout_marginTop="6dp"
                 android:id="@+id/userName"/>
             <TextView
@@ -39,7 +38,9 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="17/05/2022"
-                android:textSize="15sp"
+                android:textSize="14sp"
+                android:textAlignment="textEnd"
+                android:paddingEnd="10dp"
                 android:layout_marginTop="6dp"
                 android:id="@+id/last_seen"/>
 
@@ -48,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Description"
-            android:textSize="15sp"
+            android:textSize="14sp"
             android:layout_marginTop="6dp"
             android:id="@+id/meso_desc"/>
     </LinearLayout>
