--- a/EddySapClone/app/src/main/res/layout/fragment_calls.xml
+++ b/EddySapClone/app/src/main/res/layout/fragment_calls.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".menu.CallsFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/cals_fragment" />
+        android:id="@+id/recycleView"/>
 
 </FrameLayout>
