--- a/EddySapClone/app/src/main/res/layout/activity_splash_screen.xml
+++ b/EddySapClone/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,9 +9,9 @@
     <ImageView
         android:id="@+id/image_logo"
         android:layout_width="100dp"
-        android:src="@drawable/icone"
         android:layout_height="100dp"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:src="@drawable/whats" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,7 +26,7 @@
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="From"
+        android:text="@string/from"
         android:textSize="14sp"
         android:textStyle="bold"
         android:layout_above="@+id/text1"
@@ -40,6 +39,8 @@
         android:layout_height="wrap_content"
         android:text="@string/tabu_technologies"
         android:textSize="14sp"
+        android:textColor="@color/purple_700"
+        android:textAllCaps="true"
         android:layout_marginBottom="5dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
