--- a/EddySapClone/app/src/main/res/layout/layout_chart_list.xml
+++ b/EddySapClone/app/src/main/res/layout/layout_chart_list.xml
@@ -8,10 +8,9 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:src="@drawable/place_holder"
-        app:civ_border_width="2dp"
         android:layout_margin="5dp"
         app:civ_border_color="#FF000000"/>
 
@@ -29,7 +28,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="Name"
+                android:text="@string/name"
                 android:textStyle="bold"
                 android:textSize="17sp"
                 android:layout_marginTop="6dp"
@@ -38,10 +37,11 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="17/05/2022"
+                android:text="@string/dete"
                 android:textSize="14sp"
                 android:textAlignment="textEnd"
                 android:paddingEnd="10dp"
+                android:paddingStart="1dp"
                 android:layout_marginTop="6dp"
                 android:id="@+id/last_seen"/>
 
@@ -49,7 +49,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Description"
+            android:text="@string/description"
             android:textSize="14sp"
             android:layout_marginTop="6dp"
             android:id="@+id/meso_desc"/>
