worked upon the profile image pick from gallery

--- a/EddySapClone/app/src/main/res/layout/activity_settings.xml
+++ b/EddySapClone/app/src/main/res/layout/activity_settings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<layout>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,14 +10,21 @@
     android:orientation="vertical"
     tools:context=".View.Settings.SettingsActivity">
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/purple_500"
-        app:title="Settings"
-        app:titleTextColor="@color/white">
+        android:id="@+id/app_bar">
 
-    </androidx.appcompat.widget.Toolbar>
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/purple_500"
+            app:title="Settings"
+            app:titleTextColor="@color/white">
+
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -24,12 +34,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <LinearLayout
+                android:id="@+id/profile_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="15dp"
                 android:orientation="horizontal">
 
                 <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/image_profile"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:src="@drawable/place_holder"/>
@@ -49,7 +61,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Hey there i am using EddySap."
+                        android:text="Hey there! i am using EddySap."
                         android:id="@+id/settings_words"/>
 
                 </LinearLayout>
@@ -295,3 +307,5 @@
     </ScrollView>
 
 </LinearLayout>
+
+</layout>
