--- a/EddySapClone/app/src/main/res/layout/activity_profile.xml
+++ b/EddySapClone/app/src/main/res/layout/activity_profile.xml
@@ -36,6 +36,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_profile"
             android:layout_width="200dp"
+            android:transitionName="image"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
             android:src="@drawable/place_holder" />
@@ -70,6 +71,7 @@
             android:src="@drawable/person"/>
 
         <LinearLayout
+            android:id="@+id/edit_name_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
