--- a/EddySapClone/app/src/main/res/layout/activity_settings.xml
+++ b/EddySapClone/app/src/main/res/layout/activity_settings.xml
@@ -43,6 +43,7 @@
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/image_profile"
                     android:layout_width="70dp"
+                    android:transitionName="image"
                     android:layout_height="70dp"
                     android:src="@drawable/place_holder"/>
                 <LinearLayout
@@ -61,7 +62,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Hey there! i am using EddySap."
+                        android:text="@string/using_eddy_sap"
                         android:id="@+id/settings_words"/>
 
                 </LinearLayout>
