Not been committing because there was a problem but i have rectified it ans that was from the chat list fragment_chats.xml now its working well and fine

--- a/EddySapClone/app/src/main/res/layout/activity_main.xml
+++ b/EddySapClone/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,9 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@color/purple_500">
+        android:background="@color/purple_500"
+        android:elevation="0dp"
+        app:elevation="0dp">
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
