--- a/EddySapClone/app/src/main/res/layout/activity_chats.xml
+++ b/EddySapClone/app/src/main/res/layout/activity_chats.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout >
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <RelativeLayout
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F8EFEDED"
@@ -26,12 +25,12 @@
                 android:id="@+id/image_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:tint="@color/white"
-                android:src="@drawable/arrow_back"
                 android:layout_marginRight="10dp"
                 android:background="@android:color/transparent"
-                tools:ignore="UseAppTint" />
+                android:padding="10dp"
+                android:src="@drawable/arrow_back"
+                android:tint="@color/white"
+                tools:ignore="UseAppTint,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -78,12 +77,14 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@id/toolbar"
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_above="@id/action"
+        android:layout_below="@id/toolbar" />
 
     <LinearLayout
+        android:id="@+id/action"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -114,44 +115,50 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="15dp"
                     android:background="@android:color/transparent"
-                    android:src="@drawable/emoji" />
+                    android:src="@drawable/emoji"
+                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
                 <EditText
                     android:id="@+id/edit_message"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:padding="8dp"
-                    android:background="@android:color/transparent"
                     android:layout_marginEnd="15dp"
-                    android:hint="Message" />
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:hint="Message"
+                    android:padding="8dp"
+                    tools:ignore="TouchTargetSizeCheck" />
 
                 <ImageButton
                     android:id="@+id/image_attachment"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/attachment"
                     android:layout_marginEnd="15dp"
-                    android:background="@android:color/transparent"/>
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/attachment"
+                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
                 <ImageButton
                     android:id="@+id/image_photo"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_gravity="center_vertical"
+                    android:background="@android:color/transparent"
                     android:src="@drawable/camera"
-                    android:background="@android:color/transparent"/>
+                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btn_voice"
+            android:id="@+id/btn_send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:tint="@color/white"
             android:layout_margin="5dp"
-            android:src="@drawable/keyboard_voice"/>
+            android:src="@drawable/keyboard_voice"
+            android:tint="@color/white"
+            tools:ignore="SpeakableTextPresentCheck" />
 
     </LinearLayout>
 
