--- a/EddySapClone/app/src/main/res/layout/fragment_chats.xml
+++ b/EddySapClone/app/src/main/res/layout/fragment_chats.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/invite_layout"
+        android:visibility="gone"
         android:orientation="vertical"
         android:gravity="center_horizontal">
 
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:text="Invite your friends"
             android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:layout_marginTop="30dp"
             android:textStyle="bold"/>
 
@@ -57,6 +57,12 @@
 
 
     </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
 </layout>
