--- a/EddySapClone/app/src/main/res/layout/activity_contact.xml
+++ b/EddySapClone/app/src/main/res/layout/activity_contact.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".View.Contact.ContactActivity">
+    tools:context=".View.Activities.Contact.ContactActivity">
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
