--- a/EddySapClone/app/src/main/res/layout/activity_profile.xml
+++ b/EddySapClone/app/src/main/res/layout/activity_profile.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".View.Profile.ProfileActivity">
+    tools:context=".View.Activities.Profile.ProfileActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
