--- a/EddySapClone/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/EddySapClone/app/src/main/res/layout/activity_welcome_screen.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.starUp.WelcomeScreenActivity">
+    tools:context=".View.Activities.starUp.WelcomeScreenActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
