--- a/EddySapClone/app/src/main/res/values/themes.xml
+++ b/EddySapClone/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryDark">@color/purple_700</item>
         <item name="colorAccent">@color/teal_200</item>
+        <item name="android:textColorSecondary">@color/white</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
