--- a/EddySapClone/app/src/main/res/layout/chat_item_left.xml
+++ b/EddySapClone/app/src/main/res/layout/chat_item_left.xml
@@ -1,22 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_marginStart="5dp"
     android:layout_marginBottom="5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_text_message"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/layout_text"
+            android:visibility="visible"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_text_chat_left"
-            android:textColor="@color/black"
-            android:padding="10dp"
-            android:textSize="14sp"
-            android:layout_marginStart="10dp"
-            android:text="This is a text message"/>
+            android:orientation="vertical"
+            android:gravity="start">
+
+                <TextView
+                    android:id="@+id/tv_text_message"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_text_chat_left"
+                    android:textColor="@color/black"
+                    android:padding="10dp"
+                    android:textSize="14sp"
+                    android:layout_marginStart="10dp"
+                    android:text="This is a text message"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/layout_image"
+            android:layout_width="wrap_content"
+            android:layout_height="250dp"
+            android:visibility="gone"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="100dp"
+            android:orientation="vertical">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    app:cardCornerRadius="15dp"
+                    android:elevation="5dp"
+                    android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/chat_image"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/place_holder"/>
+
+                </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
 
 </LinearLayout>
